RESOLVED FIXED295533
REGRESSION (296901@main): Debug assertion under `ScrollingTreeStickyNode::findConstrainingRect` when opening Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=295533
Summary REGRESSION (296901@main): Debug assertion under `ScrollingTreeStickyNode::fin...
Wenson Hsieh
Reported 2025-07-07 11:36:00 PDT
Attachments
Wenson Hsieh
Comment 1 2025-07-07 12:36:17 PDT
EWS
Comment 2 2025-07-07 22:03:31 PDT
Committed 297097@main (a13640cea30b): <https://commits.webkit.org/297097@main> Reviewed commits have been landed. Closing PR #47677 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.