Source/WebCore/page/scrolling/ScrollingTreeStickyNode.cpp
@@ -61,21 +61,7 @@ bool ScrollingTreeStickyNode::commitStateBeforeChildren(const ScrollingStateNode
     if (stickyStateNode->hasChangedProperty(ScrollingStateNode::Property::ViewportConstraints))
         m_constraints = stickyStateNode->viewportConstraints();
 
-    updateIsSticking();
-
     return true;
-}
-
-void ScrollingTreeStickyNode::updateIsSticking()
-{
-    bool isSticking = isCurrentlySticking();
-    if (m_isSticking == isSticking)
-        return;
-
-    if (!std::exchange(m_isSticking, isSticking)) {
-        if (RefPtr scrollingTree = this->scrollingTree())
-            scrollingTree->stickyScrollingTreeNodeBeganSticking(scrollingNodeID());
-    }
 }
 
 void ScrollingTreeStickyNode::dumpProperties(TextStream& ts, OptionSet<ScrollingStateTreeAsTextBehavior> behavior) const
@@ -136,26 +122,29 @@ std::optional<FloatRect> ScrollingTreeStickyNode::findConstrainingRect() const
     return std::nullopt;
 }
 
-FloatPoint ScrollingTreeStickyNode::computeAnchorLayerPosition() const
+std::pair<std::optional<FloatRect>, FloatPoint> ScrollingTreeStickyNode::computeConstrainingRectAndAnchorLayerPosition() const
 {
     if (auto constrainingRect = findConstrainingRect())
-        return m_constraints.anchorLayerPositionForConstrainingRect(*constrainingRect);
+        return { constrainingRect, m_constraints.anchorLayerPositionForConstrainingRect(*constrainingRect) };
 
-    return m_constraints.layerPositionAtLastLayout();
+    return { std::nullopt, m_constraints.layerPositionAtLastLayout() };
 }
 
 FloatSize ScrollingTreeStickyNode::scrollDeltaSinceLastCommit() const
 {
-    return computeAnchorLayerPosition() - m_constraints.anchorLayerPositionAtLastLayout();
+    auto anchorLayerPosition = computeConstrainingRectAndAnchorLayerPosition().second;
+    return anchorLayerPosition - m_constraints.anchorLayerPositionAtLastLayout();
 }
 
 bool ScrollingTreeStickyNode::isCurrentlySticking() const
 {
     auto constrainingRect = findConstrainingRect();
-    if (!constrainingRect)
-        return false;
+    return constrainingRect && isCurrentlySticking(*constrainingRect);
+}
 
-    auto stickyOffset = m_constraints.computeStickyOffset(*constrainingRect);
+bool ScrollingTreeStickyNode::isCurrentlySticking(const FloatRect& constrainingRect) const
+{
+    auto stickyOffset = m_constraints.computeStickyOffset(constrainingRect);
     auto stickyRect = m_constraints.stickyBoxRect();
     auto containingRect = m_constraints.containingBlockRect();
 
