Source/WebCore/page/scrolling/cocoa/ScrollingTreeStickyNodeCocoa.h
@@ -50,7 +50,9 @@ private:
     FloatPoint layerTopLeft() const final;
     CALayer *layer() const final { return m_layer.get(); }
     bool hasViewportClippingLayer() const final;
+    void setIsSticking(bool) WTF_REQUIRES_LOCK(scrollingTree()->treeLock());
 
+    bool m_isSticking { false };
     RetainPtr<CALayer> m_layer;
     RetainPtr<CALayer> m_viewportAnchorLayer;
 };
