Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp
@@ -90,7 +90,6 @@ const RemoteLayerTreeHost* RemoteScrollingCoordinatorProxy::layerTreeHost() cons
 
 std::optional<RequestedScrollData> RemoteScrollingCoordinatorProxy::commitScrollingTreeState(IPC::Connection& connection, const RemoteScrollingCoordinatorTransaction& transaction, std::optional<LayerHostingContextIdentifier> identifier)
 {
-    m_stickyScrollingTreeNodesBeganSticking = false;
     m_requestedScroll = { };
 
     auto stateTree = WTFMove(const_cast<RemoteScrollingCoordinatorTransaction&>(transaction).scrollingStateTree());
@@ -114,15 +113,12 @@ std::optional<RequestedScrollData> RemoteScrollingCoordinatorProxy::commitScroll
     if (transaction.clearScrollLatching())
         m_scrollingTree->clearLatchedNode();
 
-    if (std::exchange(m_stickyScrollingTreeNodesBeganSticking, false))
-        protectedWebPageProxy()->stickyScrollingTreeNodeBeganSticking();
-
     return std::exchange(m_requestedScroll, { });
 }
 
 void RemoteScrollingCoordinatorProxy::stickyScrollingTreeNodeBeganSticking(ScrollingNodeID)
 {
-    m_stickyScrollingTreeNodesBeganSticking = true;
+    protectedWebPageProxy()->stickyScrollingTreeNodeBeganSticking();
 }
 
 void RemoteScrollingCoordinatorProxy::handleWheelEvent(const WebWheelEvent& wheelEvent, RectEdges<WebCore::RubberBandingBehavior> rubberBandableEdges)
